# voice-test

./: .gitignore  README.md  nixpacks.toml  railway.toml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  __main__.py  config.py  main.py
backend/app/routes/: elevenlabs.py
backend/app/services/: elevenlabs.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentConfigMenu.tsx  AgentConfigTrigger.tsx  AgentExperienceLayout.tsx  CallPanel.tsx  CallPanelContainer.tsx  DiffView.tsx  EditPanel.tsx  EditPanelContainer.tsx  LiveTranscript.tsx
frontend/src/context/: AgentExperienceContext.tsx
frontend/src/hooks/: useAgentConfigControls.ts  useAgentOverride.ts  useCallController.ts  useFeedbackRecorder.ts  usePromptEditor.ts  usePromptWorkflow.ts
frontend/src/utils/: api.ts  audio.ts  text.ts
