[project]
name = "voice-test-backend"
version = "0.1.0"
description = "Backend service for the voice-test playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "elevenlabs>=0.2"
]

[project.scripts]
dev = "app.main:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
